--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ section {
 }
 
 .intro button, 
-.match button {
+.match button,
+.play-again button {
     width: 150px; 
     height: 50px; 
     background: none; 
@@ -86,6 +87,13 @@ div.fadeOut {
 div.fadeIn{
     opacity: 1;
     pointer-events: all;
+}
+
+.play-again {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;   
+    justify-content: space-around;
 }
 
 @keyframes shakePlayer {
